<resources>

    <string name="app_name">Eclectic-Store</string>

    <!--barcode-->
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <!--app string-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="it_will_help_you">It will help you...</string>
    <string name="keep_records_of">Keep records of</string>
    <string name="purchase_sales"><![CDATA[purchase & Sales]]></string>
    <string name="customer_vendors"><![CDATA[customers & vendors]]></string>
    <string name="monitor_settlement">Monitor settlements with</string>
    <string name="monitor_work">Monitor the work of</string>
    <string name="outlets">all your outlets</string>
    <string name="make_inventory">Make inventory</string>
    <string name="price_monitor"><![CDATA[price monitor & adjustments]]></string>
    <string name="strcontinue">Continue</string>
    <string name="nationality">Nationality</string>
    <string name="id_passport">ID | Passport</string>
    <string name="email_address">Email address</string>
    <string name="signup">Signup</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="first_name">First Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Log In</string>
    <string name="email_address_phonenumber">Email address/Phonenumber</string>
    <string name="terms_privacy">By signing in, you agree the Terms of \n Service and Privacy Policy</string>
    <string name="password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_business_manage">BusinessManageActivity</string>
    <string name="verify_info">What\'s your verification code</string>
    <string name="verify_confirmation_code">Verify Confirmation Code</string>
    <string name="verification_successfull">Verification Successful</string>
    <string name="register_thank_you">Thank for joining our Quickstore. \n We believe in growing with our client</string>
    <string name="under_development">Under development</string>
    <string name="remove_staff">Remove Staff</string>
    <string name="update">Update</string>
    <string name="title_activity_test2">Test2Activity</string>
    <string name="storename">Store:   </string>
    <string name="new_staff">New Staff</string>
    <string name="assigned_store">Assigned Store</string>
    <string name="assigned_role">Assigned Role</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="phonenumber">Phonenumber</string>
    <string name="dial_code">Dial Code</string>
    <string name="name">Name</string>
    <string name="has_barcode">Has barcode</string>
    <string name="generate_barcode">Generate barcode</string>
    <string name="my_gallery">My gallery</string>
    <string name="productName">Product name</string>
    <string name="save_unit">Save unit</string>
    <string name="cancel">Cancel</string>
    <string name="invoice">Invoice</string>
    <string name="products">Products</string>
    <string name="search_all_items">Search all items</string>
    <string name="cart">Cart</string>
    <string name="total_pos_label">Total Ksh 0.00</string>
    <string name="product_number">Product number</string>
    <string name="category_name">Category name</string>
    <string name="upload_photo">Upload photo</string>
    <string name="take_photo">Take photo</string>
    <string name="product">Product</string>
    <string name="units">Units</string>
    <string name="product_price">Product price @ Ksh</string>
    <string name="order_list">Order List</string>
    <string name="image">image</string>
    <string name="delete">Delete</string>
    <string name="continueStr">Continue</string>
    <string name="business_name">Business Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="by_signing_in_you_agree_the">By signing in you agree the </string>
    <string name="check_internet">Something went wrong.Please check your Internet</string>
    <string name="loading">loading</string>
    <string name="create_password">Create Password</string>
    <string name="password_dont_match">Password don\'t match.Try again</string>
    <string name="resending">Resending..</string>
    <string name="resend_code">Resend Code</string>
    <string name="sms_verification">Sms Verification</string>
    <string name="contact_person">Contact person</string>
    <string name="id_passport_no_pin">Id/Passport no/PIN</string>
    <string name="total_cash">Total Cash</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="can_create">Can Create</string>
    <string name="can_view">Can View</string>
    <string name="can_delete">Can Delete</string>

</resources>
