<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/rootView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".activities.auth.PasswordActivity"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_below="@+id/toolBar"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtSuccessInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification_successfull"
            android:textColor="@color/linkTextColor"
            android:gravity="center"
            android:fontFamily="@font/montserrat_medium"
            />
        <TextView
            android:id="@+id/txtInfo"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_thank_you"
            android:gravity="center"
            android:fontFamily="@font/montserrat_regular"
            />
        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="SignUp"
                    android:imeOptions="actionNext"
                    android:imeActionId="10"
                    android:hint="@string/password"
                    style="@style/EditTextTheme"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etxtCPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="Signup"
                android:imeOptions="actionSend"
                android:imeActionId="20"
                android:hint="@string/confirm_password"
                style="@style/EditTextTheme"
                android:inputType="textPassword"
                />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>



    </LinearLayout>
    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        style="@style/ButtonTheme"
        android:text="@string/strcontinue"
        />
    </RelativeLayout>

</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>