<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.SmsVerificationActivity"
    android:id="@+id/rootView">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtVerifyInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_info"
            android:textColor="@color/linkTextColor"
            android:fontFamily="@font/montserrat_medium"
            />

        <LinearLayout
            android:padding="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etxt1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:imeActionId="10"
                style="@style/EditTextVerify"
                />
            <EditText
                android:id="@+id/etxt2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:imeActionId="20"
                style="@style/EditTextVerify"
                />
            <EditText
                android:id="@+id/etxt3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:imeActionId="30"
                style="@style/EditTextVerify"
                />
            <EditText
                android:id="@+id/etxt4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:imeActionId="40"
                style="@style/EditTextVerify"
                />
            <EditText
                android:id="@+id/etxt5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:imeActionId="50"
                style="@style/EditTextVerify"
                />


        </LinearLayout>

        <Button
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            style="@style/ButtonTheme"
            android:text="@string/verify_confirmation_code"
            />

        <Button
            android:id="@+id/btnResendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:text="@string/resend_code"
            />

    </LinearLayout>

</LinearLayout>
</android.support.design.widget.CoordinatorLayout>